# portfolio

./: .gitattributes  .gitignore  CLAUDE.md  README.md  architecture.mermaid  portfolio-plan.md
.claude/: design_language.md  project-status.md  settings.json
.claude/agents/: backend-dev.md  design.md  devops.md  frontend-dev.md
.claude/hooks/: auto-lint.sh  block-dangerous.sh
.claude/rules/: backend.md  frontend.md  infra.md
backend/: pyproject.toml
backend/data/: seed.json
backend/portfolio_api/: config.py  database.py  main.py  seed.py
backend/portfolio_api/models/: __init__.py  contact.py  project.py
backend/portfolio_api/routers/: contact.py  health.py  projects.py
backend/portfolio_api/schemas/: contact.py  project.py
claude_plans/: Text OCR Demo - Execution Plan.md  frontend-design-plan.md
claude_session_learnings/: 001_2026-02-20_1451_text-ocr-demo.md  002_2026-02-20_1532_local-deploy-fixes.md  003_2026-02-20_1532_claude-skills-tooling.md  004_2026-02-22_1956_neural-observatory-redesign.md
demos/bomberman-rl/: SPEC.md
demos/eeg-generator/: SPEC.md
demos/medical-chatbot/: SPEC.md
demos/text-ocr/: SPEC.md  app.py  model.py  pyproject.toml
demos/text-ocr/.streamlit/: config.toml
demos/text-ocr/assets/: samples.json
demos/text-ocr/models/: mappings.json  ocr_lstm_int8.onnx
demos/text-ocr/scripts/: export_onnx.py
demos/text-ocr/tests/: test_app.py  test_model.py
deploy/nginx/: portfolio.conf
deploy/scripts/: deploy.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
(+21 files in other folders)
