[project]
name = "portfolio-api"
version = "0.1.0"
description = "FastAPI backend for portfolio website"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "email-validator>=2.3.0",
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "ruff>=0.15.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
